samples/_failures_safe/1761190072_1bad9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e9fb222.c: In function ‘main’:
./samples/SAFE/__tmp_9e9fb222.c:160:44: error: expected ‘)’ at end of input
  160 |     for (int i = 0; i < graph.node_count; i
      |         ~                                  ^
      |                                            )
./samples/SAFE/__tmp_9e9fb222.c:160:5: error: expected declaration or statement at end of input
  160 |     for (int i = 0; i < graph.node_count; i
      |     ^~~
